--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
    </head> 
    <body>
-       <h1>Matchstick Game</h1>
+       <h1>Matchstick Game!!!</h1>
        <div id= "matchstick-container"></div>
 
        <p>Number of Matchstick: <span id="num-matchsticks"></span></p>
