update font color

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <head>
        <style>
            .matchstick {
-               width: 80px;
+               width: 60px;
            }
            label {
                font-size: 1.5em;
@@ -20,6 +20,15 @@
                height: 35px;
                font-size: 1.5em;
            }
+           h1 {text-align: center;}
+           h1 {font-size: 4em;}
+           h1 {font-family: Verdana, Geneva, Tahoma, sans-serif;}
+           h1{ color:rgb(255, 0, 0)}
+           p {text-align: center;}
+           p {font-size: 2em;}
+           label {text-align: center;}
+           label {font-style: bold;}
+           label {color: rgb(255, 0, 0); }
        </style>
 
    </head> 
