--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
    </head> 
    <body>
        <h1>Matchstick Game!!!</h1>
+       <p>Matchstick is a two player game. There are N matches on the table initially. In each turn, current player picks 1, 2, or 3 matches from the table. The player who picks the last match on the table wins the game.</p>
        <div id= "matchstick-container"></div>
 
        <p>Number of Matchstick: <span id="num-matchsticks"></span></p>
